// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should be rendered correctly with data 1`] = `
<div
  className="bpk-card bpk-card--padded Card"
  onClick={[Function]}
  role="button"
>
  <div
    className="bpk-grid__container"
  >
    <div
      className="bpk-grid__row bpk-grid__row--padded"
    >
      <div>
        <div
          className="bpk-grid__column bpk-grid__column--1 bpk-grid__column--padded"
        >
          <div>
            <img
              alt=""
              src="https://logos.skyscnr.com/images/airlines/favicon/BE.png"
              style={
                Object {
                  "position": "relative",
                  "width": "30px",
                }
              }
            />
          </div>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
        >
          <p
            className="bpk-text bpk-text--base"
          >
            7:20
          </p>
          <p
            className="bpk-text bpk-text--base"
          >
            EDI
          </p>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--1 bpk-grid__column--padded"
        >
          <svg
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7s0-.4-.1-.6c-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z"
            />
          </svg>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
        >
          <p
            className="bpk-text bpk-text--base"
          >
            14:25
          </p>
          <p
            className="bpk-text bpk-text--base"
          >
            LHR
          </p>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--3 bpk-grid__column--offset-3 bpk-grid__column--padded"
        >
          <p
            className="bpk-text bpk-text--base"
          >
            7h 5m 
          </p>
          <p
            className="bpk-text bpk-text--base"
            style={
              Object {
                "color": "rgb(255, 84, 82)",
              }
            }
          >
            1 Stops
          </p>
        </div>
      </div>
    </div>
    <div
      className="bpk-grid__row bpk-grid__row--padded"
    >
      <div>
        <div
          className="bpk-grid__column bpk-grid__column--1 bpk-grid__column--padded"
        >
          <div>
            <img
              alt=""
              src="https://logos.skyscnr.com/images/airlines/favicon/BA.png"
              style={
                Object {
                  "position": "relative",
                  "width": "30px",
                }
              }
            />
          </div>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
        >
          <p
            className="bpk-text bpk-text--base"
          >
            18:20
          </p>
          <p
            className="bpk-text bpk-text--base"
          >
            LHR
          </p>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--1 bpk-grid__column--padded"
        >
          <svg
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6 4.5L3.9 9.9c-.4.4-.7.9-.8 1.5-.1.2-.1.4-.1.6 0 .2 0 .4.1.6.1.6.4 1.1.8 1.5l5.7 5.3c.8.8 2.1.7 2.8-.1.8-.8.7-2.1-.1-2.8L9.6 14H19c1.1 0 2-.9 2-2s-.9-2-2-2H9.6l2.7-2.5c.5-.4.7-1 .7-1.5s-.2-1-.5-1.4c-.8-.8-2.1-.8-2.9-.1z"
            />
          </svg>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
        >
          <p
            className="bpk-text bpk-text--base"
          >
            19:45
          </p>
          <p
            className="bpk-text bpk-text--base"
          >
            EDI
          </p>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--3 bpk-grid__column--offset-3 bpk-grid__column--padded"
        >
          <p
            className="bpk-text bpk-text--base"
          >
            1h 25m 
          </p>
          <p
            className="bpk-text bpk-text--base"
            style={
              Object {
                "color": "rgb(0, 215, 117)",
              }
            }
          >
            Direct
          </p>
        </div>
      </div>
    </div>
    <div
      className="bpk-grid__row bpk-grid__row--padded"
    >
      <div
        className="bpk-grid__column bpk-grid__column--8 bpk-grid__column--padded"
      >
        <p
          className="bpk-text bpk-text--lg bpk-text--bold"
        >
          £356.38
           
        </p>
        <p
          className="bpk-text bpk-text--base"
        >
          GotoGate
        </p>
      </div>
      <div
        className="bpk-grid__column bpk-grid__column--4 bpk-grid__column--padded"
      >
        <button
          className="bpk-button"
          disabled={false}
          onClick={null}
          type="button"
        >
          Select
        </button>
      </div>
    </div>
  </div>
  <dl
    className="bpk-accordion"
  >
    <div
      id="stops"
    >
      <dt
        aria-level="3"
        className="bpk-accordion__title"
        role="heading"
      >
        <button
          aria-controls="stops_content"
          aria-expanded={false}
          className="bpk-accordion__toggle-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="bpk-accordion__flex-container"
          >
            <span
              className="bpk-accordion__title-text"
            >
              Stops
            </span>
            <span
              className="bpk-accordion__icon-wrapper"
            >
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "lineHeight": "1.125rem",
                    "marginTop": "0.1875rem",
                    "verticalAlign": "top",
                  }
                }
              >
                <svg
                  className="bpk-accordion__item-expand-icon"
                  height="18"
                  style={
                    Object {
                      "height": "1.125rem",
                      "width": "1.125rem",
                    }
                  }
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 17.5l-7.2-6.4c-.6-.5-.7-1.5-.1-2.1.5-.6 1.5-.7 2.1-.1l5.2 4.6 5.2-4.6c.6-.6 1.6-.5 2.1.1s.5 1.6-.1 2.1L12 17.5z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </button>
      </dt>
      <div
        onTransitionEnd={[Function]}
        style={
          Object {
            "MozTransition": "height 200ms ease ",
            "OTransition": "height 200ms ease ",
            "WebkitTransition": "height 200ms ease ",
            "height": 0,
            "msTransition": "height 200ms ease ",
            "overflow": "hidden",
            "transition": "height 200ms ease ",
          }
        }
      >
        <div>
          <dd
            aria-labelledby="stops_title"
            className="bpk-accordion__content-container"
            id="stops_content"
            role="region"
          >
            <div
              className="bpk-grid__container"
            >
              <div
                className="bpk-grid__row bpk-grid__row--padded"
              >
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <div>
                    <img
                      alt=""
                      src="https://logos.skyscnr.com/images/airlines/favicon/BE.png"
                      style={
                        Object {
                          "position": "relative",
                          "width": "30px",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    Departure
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    7:20
                  </p>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    From:
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    Edinburgh
                  </p>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    Arrival
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    8:15
                  </p>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    To:
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    Belfast City
                  </p>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    From:
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    0h 55m 
                  </p>
                </div>
              </div>
              <div
                className="bpk-grid__row bpk-grid__row--padded"
              >
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <div>
                    <img
                      alt=""
                      src="https://logos.skyscnr.com/images/airlines/favicon/EI.png"
                      style={
                        Object {
                          "position": "relative",
                          "width": "30px",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    Departure
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    13:05
                  </p>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    From:
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    Belfast City
                  </p>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    Arrival
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    14:25
                  </p>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    To:
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    London Heathrow
                  </p>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    From:
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    1h 20m 
                  </p>
                </div>
              </div>
            </div>
            ----------
            <div
              className="bpk-grid__container"
            >
              <div
                className="bpk-grid__row bpk-grid__row--padded"
              >
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <div>
                    <img
                      alt=""
                      src="https://logos.skyscnr.com/images/airlines/favicon/BA.png"
                      style={
                        Object {
                          "position": "relative",
                          "width": "30px",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    Departure
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    18:20
                  </p>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    From:
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    London Heathrow
                  </p>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    Arrival
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    19:45
                  </p>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    To:
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    Edinburgh
                  </p>
                </div>
                <div
                  className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
                >
                  <p
                    className="bpk-text bpk-text--sm"
                  >
                    From:
                  </p>
                  <p
                    className="bpk-text bpk-text--sm bpk-text--bold"
                  >
                    1h 25m 
                  </p>
                </div>
              </div>
            </div>
          </dd>
        </div>
      </div>
    </div>
  </dl>
</div>
`;

exports[`Card should be rendered without data 1`] = `
<div
  className="bpk-card bpk-card--padded Card"
  onClick={[Function]}
  role="button"
>
  <div
    className="bpk-grid__container"
  >
    <div
      className="bpk-grid__row bpk-grid__row--padded"
    >
      <div>
        <div
          className="bpk-grid__column bpk-grid__column--1 bpk-grid__column--padded"
        >
          <div>
            <img
              alt=""
              src="https://logos.skyscnr.com/images/airlines/favicon/.png"
              style={
                Object {
                  "position": "relative",
                  "width": "30px",
                }
              }
            />
          </div>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
        >
          <p
            className="bpk-text bpk-text--base"
          >
            NaN:NaN
          </p>
          <p
            className="bpk-text bpk-text--base"
          >
            
          </p>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--1 bpk-grid__column--padded"
        >
          <svg
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7s0-.4-.1-.6c-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z"
            />
          </svg>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
        >
          <p
            className="bpk-text bpk-text--base"
          >
            NaN:NaN
          </p>
          <p
            className="bpk-text bpk-text--base"
          >
            
          </p>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--3 bpk-grid__column--offset-3 bpk-grid__column--padded"
        >
          <p
            className="bpk-text bpk-text--base"
          >
            NaNh NaNm 
          </p>
          <p
            className="bpk-text bpk-text--base"
            style={
              Object {
                "color": "rgb(0, 215, 117)",
              }
            }
          >
            Direct
          </p>
        </div>
      </div>
    </div>
    <div
      className="bpk-grid__row bpk-grid__row--padded"
    >
      <div>
        <div
          className="bpk-grid__column bpk-grid__column--1 bpk-grid__column--padded"
        >
          <div>
            <img
              alt=""
              src="https://logos.skyscnr.com/images/airlines/favicon/.png"
              style={
                Object {
                  "position": "relative",
                  "width": "30px",
                }
              }
            />
          </div>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
        >
          <p
            className="bpk-text bpk-text--base"
          >
            NaN:NaN
          </p>
          <p
            className="bpk-text bpk-text--base"
          >
            
          </p>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--1 bpk-grid__column--padded"
        >
          <svg
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6 4.5L3.9 9.9c-.4.4-.7.9-.8 1.5-.1.2-.1.4-.1.6 0 .2 0 .4.1.6.1.6.4 1.1.8 1.5l5.7 5.3c.8.8 2.1.7 2.8-.1.8-.8.7-2.1-.1-2.8L9.6 14H19c1.1 0 2-.9 2-2s-.9-2-2-2H9.6l2.7-2.5c.5-.4.7-1 .7-1.5s-.2-1-.5-1.4c-.8-.8-2.1-.8-2.9-.1z"
            />
          </svg>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--2 bpk-grid__column--padded"
        >
          <p
            className="bpk-text bpk-text--base"
          >
            NaN:NaN
          </p>
          <p
            className="bpk-text bpk-text--base"
          >
            
          </p>
        </div>
        <div
          className="bpk-grid__column bpk-grid__column--3 bpk-grid__column--offset-3 bpk-grid__column--padded"
        >
          <p
            className="bpk-text bpk-text--base"
          >
            NaNh NaNm 
          </p>
          <p
            className="bpk-text bpk-text--base"
            style={
              Object {
                "color": "rgb(0, 215, 117)",
              }
            }
          >
            Direct
          </p>
        </div>
      </div>
    </div>
    <div
      className="bpk-grid__row bpk-grid__row--padded"
    >
      <div
        className="bpk-grid__column bpk-grid__column--8 bpk-grid__column--padded"
      >
        <p
          className="bpk-text bpk-text--lg bpk-text--bold"
        >
          £0.00
           
        </p>
        <p
          className="bpk-text bpk-text--base"
        >
          
        </p>
      </div>
      <div
        className="bpk-grid__column bpk-grid__column--4 bpk-grid__column--padded"
      >
        <button
          className="bpk-button"
          disabled={false}
          onClick={null}
          type="button"
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;
